update: web link resource cards

--- a/src/pages/designing/kits/adobe-xd.mdx
+++ b/src/pages/designing/kits/adobe-xd.mdx
@@ -82,6 +82,57 @@ To design with Carbon you must have the most recent version of
 </Column>
 </Row>
 
+To view the four Carbon theme libraries on the web, visit these web links.
+
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
+    subTitle="White theme"
+    href="https://assets.adobe.com/libraries/urn:aaid:sc:VA7:35c94afd-9cc4-4703-a4b0-49acb165d28d?libraryVersion=8&org=973430F0543801CA0A4C98C6%40AdobeOrg"
+    actionIcon="launch">
+
+![Adobe XD icon](/images/adobe-xd.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    onClick={() => fathom.trackGoal('T7D1HJ3L', 0)}
+    subTitle="Gray 10 theme"
+    href="https://assets.adobe.com/libraries/urn:aaid:sc:VA7:92418e29-f824-4cfc-9be2-866a5230cbb1?libraryVersion=5&org=973430F0543801CA0A4C98C6%40AdobeOrg"
+    actionIcon="launch">
+
+![Adobe XD icon](/images/adobe-xd.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    onClick={() => fathom.trackGoal('LYFJTPDE', 0)}
+    subTitle="Gray 90 theme"
+    href="https://assets.adobe.com/libraries/urn:aaid:sc:VA7:fc4859fd-beea-4407-b41c-34170a4e8203?libraryVersion=9&org=973430F0543801CA0A4C98C6%40AdobeOrg"
+    actionIcon="launch">
+
+![Adobe XD icon](/images/adobe-xd.png)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    onClick={() => fathom.trackGoal('3XH0SIBJ', 0)}
+    subTitle="Gray 100 theme"
+    href="https://assets.adobe.com/libraries/urn:aaid:sc:VA7:4f44b97f-34a1-413b-b188-fc15337df1b6?libraryVersion=14&org=973430F0543801CA0A4C98C6%40AdobeOrg"
+    actionIcon="launch">
+
+![Adobe XD icon](/images/adobe-xd.png)
+
+  </ResourceCard>
+</Column>
+</Row>
+
+<br />
+
 ## Start designing 
 
 ### Components
@@ -157,4 +208,5 @@ old one. Releases will be posted to the
 ## Feedback
 
 Help us improve this component by providing feedback, asking questions, and
-leaving any other comments on GitHub. Testing changes
+leaving any other comments on
+[GitHub](https://github.com/carbon-design-system/carbon-design-kit/issues).
