update: link content

--- a/src/pages/designing/kits/adobe-xd.mdx
+++ b/src/pages/designing/kits/adobe-xd.mdx
@@ -82,7 +82,7 @@ To design with Carbon you must have the most recent version of
 </Column>
 </Row>
 
-To view the four Carbon theme libraries on the web, visit these web links.
+To view the four Carbon theme libraries on the web, visit these links.
 
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
