--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -243,25 +243,7 @@ in the header area.
 
 #### Keyboard
 
-Users can trigger a state change by pressing `Enter` or `Space` while the header
-area has focus. For additional keyboard interactions, see the
-[accessibility tab](/components/accordion/accessibility#how-it-works).
-
-Users can navigate between accordion headers by pressing `Tab` or `Shift-Tab`.
-
-#### Screen readers
-
-VoiceOver: Users can trigger a state change by pressing `Control-Option-Space`
-or `Space` while the header area has screen reader focus.
-
-JAWS: Users can trigger a state change by pressing `Enter` or `Space` while the
-header area has screen reader focus.
-
-NVDA: Users can trigger a state change by pressing `Enter` or `Space` while the
-header area has screen reader focus.
-
-For additional information, see
-[screen reader tests](https://www.carbondesignsystem.com/components/accordion/accessibility#macos-screen-reader-tests).
+Users can navigate between accordion headers by pressing `Tab` or `Shift-Tab`. Users can trigger a state change by pressing `Enter` or `Space` while the header area has focus. For additional keyboard interactions, see the [accessibility tab](/components/accordion/accessibility#keyboard-interactions).
 
 ## Related
 
