--- a/src/pages/components/breadcrumb/usage.mdx
+++ b/src/pages/components/breadcrumb/usage.mdx
@@ -172,7 +172,7 @@ For further content guidance, see Carbon's
 
 ### Interactions
 
-All the page links in the breadcrumb component should be interactive and link to
+All the pages in the breadcrumb component should be interactive (except the current page) and link to
 their respective pages.
 
 #### Mouse
@@ -182,26 +182,9 @@ between page links are not interactive.
 
 #### Keyboard
 
-Users can trigger a breadcrumb link by pressing `Enter` while the link has
+Users can navigate between breadcrumb links by pressing `Tab` and `Shift-Tab`. Users can trigger a breadcrumb link by pressing `Enter` while the link has
 focus. For additional keyboard interactions, see
 the [accessibility tab](https://www.carbondesignsystem.com/components/breadcrumb/accessibility).
-
-Users can navigate between breadcrumb links by pressing `Tab` and `Shift-Tab`.
-
-#### Screen readers
-
-VoiceOver: Users can trigger a breadcrumb link by pressing `Enter` or
-`Control-Option-Space`. Users can navigate between breadcrumb links by
-pressing `Tab` and `Shift-Tab`.
-
-Jaws: Users can trigger a breadcrumb link by pressing `Enter`. Users can
-navigate between breadcrumb links by pressing the `Up` and `Down` arrow keys.
-
-NVDA: Users can trigger a breadcrumb link by pressing `Enter`. Users can
-navigate between breadcrumb links by pressing the `Up` and `Down` arrow keys.
-
-For additional information, see
-[screen reader tests](https://www.carbondesignsystem.com/components/breadcrumb/accessibility#macos-screen-reader-tests).
 
 ## Modifiers
 
