--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -46,7 +46,7 @@ interacts with it.
 #### When to use
 
 Use buttons to communicate actions users can take and to allow users to interact
-with the page. Each page should have one primary button, and any remaining calls
+with the page. Each page should have only one primary button, and any remaining calls
 to action should be represented as lower emphasis buttons.
 
 #### When not to use
@@ -594,18 +594,7 @@ Users can trigger a button by clicking anywhere within the button container.
 #### Keyboard
 
 Users can trigger a button by pressing `Enter` or `Space` while the button has
-focus. For additional keyboard interactions, see the accessibility tab.
-
-#### Screen readers
-
-VoiceOver: Users can trigger a button by pressing `Enter` or `Space` while the
-button has focus.
-
-JAWS: Users can trigger a button by pressing `Enter` or `Space` while the button
-has focus.
-
-NVDA: Users can trigger a button by pressing `Enter` or `Space` while the button
-has focus.
+focus. For additional keyboard interactions, see the [accessibility tab](/components/button/accessibility).
 
 ## Modifiers
 
