--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -50,6 +50,14 @@ building websites and user interfaces.
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
+    subTitle="Figma kit"
+    href="/designing/kits/figma"
+    >
+      <MdxIcon name="figma" />
+  </ResourceCard>
+</Column>  
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
     subTitle="Sketch kits"
     href="/designing/kits/sketch"
     >
